--- a/resource-service/package.json
+++ b/resource-service/package.json
@@ -4,15 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/cookie-parser": "^1.4.1",
-    "@types/dotenv": "^6.1.1",
-    "@types/nodemailer": "^4.6.7",
-    "@types/passport-google-oauth": "^1.0.41",
-    "@types/socket.io": "^2.1.2",
-    "@types/uuid": "^3.4.4",
     "apollo-server-express": "^2.3.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
     "connect-redis": "^3.4.1",
-    "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
@@ -21,12 +16,11 @@
     "passport": "^0.4.0",
     "pg": "^7.9.0",
     "reflect-metadata": "^0.1.12",
-    "socket.io": "^2.2.0",
-    "type-graphql": "^0.16.0",
-    "typeorm": "^0.2.16",
-    "uuid": "^3.3.2"
+    "type-graphql": "^0.17.4",
+    "typeorm": "^0.2.16"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/connect-redis": "0.0.9",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.12",
