--- a/authentication-service/package.json
+++ b/authentication-service/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
     "apollo-server-express": "^2.3.1",
+    "body-parser": "^1.19.0",
     "class-validator": "^0.9.1",
     "connect-redis": "^3.4.1",
     "dotenv": "^7.0.0",
