--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "with-typescript",
+  "name": "custom-server-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
+    "dev": "nodemon",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
-    "next": "^8.1.1-canary.28",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "next": "^8.1.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   },
   "devDependencies": {
-    "@types/node": "^11.13.9",
-    "@types/react": "^16.8.15",
-    "@types/react-dom": "^16.0.11"
-  },
-  "license": "ISC"
+    "@types/next": "^8.0.5",
+    "@types/react": "^16.8.17",
+    "@types/react-dom": "16.8.4",
+    "@zeit/next-typescript": "^1.1.1",
+    "cross-env": "^5.2.0",
+    "nodemon": "^1.19.0",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5"
+  }
 }
