--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -7,6 +7,8 @@
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
+    "dotenv": "^8.0.0",
     "next": "^8.1.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
