--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -7,20 +7,46 @@
     "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
-    "@types/dotenv": "^6.1.1",
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/styles": "^4.0.2",
+    "apollo-boost": "^0.4.1",
+    "apollo-client": "beta",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
+    "classnames": "^2.2.6",
+    "cookie": "^0.4.0",
     "dotenv": "^8.0.0",
+    "formik": "^1.5.7",
+    "graphql": "^14.3.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "jss": "^9.8.7",
     "next": "^8.1.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.6",
+    "react-dom": "^16.8.6",
+    "react-jss": "^8.6.1",
+    "styled-jsx": "^3.2.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.2.0",
+    "@graphql-codegen/typescript": "^1.2.0",
+    "@graphql-codegen/typescript-operations": "^1.2.0",
+    "@graphql-codegen/typescript-react-apollo": "^1.2.0",
+    "@types/classnames": "^2.2.8",
+    "@types/cookie": "^0.3.3",
+    "@types/dotenv": "^6.1.1",
     "@types/next": "^8.0.5",
-    "@types/react": "^16.8.17",
+    "@types/react": "^16.8.19",
     "@types/react-dom": "16.8.4",
+    "@types/react-jss": "^8.6.3",
+    "@types/recompose": "^0.30.6",
+    "@types/styled-jsx": "^2.2.8",
     "@zeit/next-typescript": "^1.1.1",
     "cross-env": "^5.2.0",
-    "nodemon": "^1.19.0",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.5"
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.2.0",
+    "typescript": "^3.5.1"
   }
 }
