--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -2,9 +2,9 @@
   "name": "custom-server-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "ts-node-dev --project tsconfig.server.json server/index.ts",
     "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/index.js"
+    "start": "cp .env ./dist && node dist/index.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.0.2",
@@ -47,6 +47,7 @@
     "cross-env": "^5.2.0",
     "nodemon": "^1.19.1",
     "ts-node": "^8.2.0",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.1",
+    "ts-node-dev": "^1.0.0-pre.39"
   }
 }
