--- a/admin-client/tsconfig.json
+++ b/admin-client/tsconfig.json
@@ -1,23 +1,16 @@
 {
-  "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "jsx": "preserve",
-    "lib": ["dom", "es2017"],
-    "baseUrl": ".",
-    "moduleResolution": "node",
-    "strict": true,
-    "allowJs": true,
-    "noEmit": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "isolatedModules": true,
-    "removeComments": false,
-    "preserveConstEnums": true,
-    "sourceMap": true
-  },
-  "exclude": ["dist", ".next", "out", "next.config.js"]
-}
+    "compilerOptions": {
+      "allowSyntheticDefaultImports": true,
+      "jsx": "react",
+      "module": "commonjs",
+      "noImplicitAny": true,
+      "outDir": "./build/",
+      "preserveConstEnums": true,
+      "removeComments": true,
+      "sourceMap": true,
+      "target": "es5"
+    },
+    "include": [
+      "./src/**/**/*"
+    ]
+  }
