--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,7 +12,7 @@ server {
   location /auth/ {
     proxy_pass http://auth-service:8080/;
   }
-  location /admin/ {
+  location /panel/ {
     proxy_pass http://admin-client:8080/;
 
     proxy_http_version 1.1;
@@ -20,6 +20,5 @@ server {
     proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
-  
   }
 }
