Change config for devel

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,13 +12,13 @@ server {
   location /auth/ {
     proxy_pass http://auth-service:8080/;
   }
-  location /panel/ {
-    proxy_pass http://admin-client:8080/;
+  # location /panel/ {
+  #   proxy_pass http://admin-client:8080/;
 
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
-  }
+  #   proxy_http_version 1.1;
+  #   proxy_set_header Upgrade $http_upgrade;
+  #   proxy_set_header Connection 'upgrade';
+  #   proxy_set_header Host $host;
+  #   proxy_cache_bypass $http_upgrade;
+  # }
 }
