--- a/config.yml
+++ b/config.yml
@@ -34,7 +34,7 @@ services:
     depends_on:
       - resource-service
       - auth-service
-      - admin-client
+      # - admin-client
 
   resource-service:
     build: ./resource-service
@@ -55,12 +55,12 @@ services:
       - session-store
     env_file:
       - ./.env/auth-service.env
-  admin-client:
-    build: ./admin-client
-    image: admin-client:latest
-    restart: always
-    depends_on:
-      - auth-service
-      - resource-service
-    env_file:
-      - ./.env/admin-client.env
+  # admin-client:
+  #   build: ./admin-client
+  #   image: admin-client:latest
+  #   restart: always
+  #   depends_on:
+  #     - auth-service
+  #     - resource-service
+  #   env_file:
+  #     - ./.env/admin-client.env
