--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/styles": "^4.0.2",
     "@types/react-router-dom": "^4.3.3",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.19.0",
