--- a/admin-client/tsconfig.json
+++ b/admin-client/tsconfig.json
@@ -9,6 +9,7 @@
     "preserveConstEnums": true,
     "removeComments": false,
     "sourceMap": true,
+    "strictNullChecks": true,
     "target": "es5"
   },
   "include": ["./src/**/**/*"]
