--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -5,37 +5,38 @@
   "license": "MIT",
   "dependencies": {
     "@types/body-parser": "^1.17.0",
-    "apollo-server-express": "^2.3.1",
+    "apollo-server-express": "^2.6.2",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "connect-redis": "^3.4.1",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "express-session": "^1.16.1",
-    "googleapis": "^39.2.0",
-    "graphql": "^14.0.2",
-    "ioredis": "^4.9.0",
+    "googleapis": "^40.0.0",
+    "graphql": "^14.3.1",
+    "ioredis": "^4.10.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
-    "pg": "^7.9.0",
-    "reflect-metadata": "^0.1.12",
-    "type-graphql": "^0.16.0",
+    "pg": "^7.11.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^0.17.4",
     "typeorm": "^0.2.16"
   },
   "devDependencies": {
-    "@types/connect-redis": "0.0.9",
+    "@types/connect-redis": "0.0.10",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.16.0",
+    "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.12",
     "@types/gapi": "0.0.36",
-    "@types/graphql": "^14.0.4",
-    "@types/ioredis": "^4.0.10",
-    "@types/node": "^10.12.18",
+    "@types/graphql": "^14.2.0",
+    "@types/ioredis": "^4.0.11",
+    "@types/node": "^12.0.7",
     "@types/passport": "^1.0.0",
     "@types/passport-google-oauth": "^1.0.41",
-    "nodemon": "^1.18.9",
-    "ts-node": "^7.0.1",
-    "ts-node-dev": "^1.0.0-pre.32",
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.2.0",
+    "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "3.3.4000"
   },
   "scripts": {
