--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "cd dist && node index.js",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --project tsconfig.json src/index.ts"
   }
 }
