--- a/resource-service/package.json
+++ b/resource-service/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "build": "tsc ",
-    "start": "tsc && cd dist && node index.js",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev --no-notify --respawn src/index.ts"
   }
 }
