--- a/gateway/package.json
+++ b/gateway/package.json
@@ -4,15 +4,31 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.1",
     "@types/graphql": "^14.2.0",
     "@types/node": "^12.0.7",
     "@types/node-fetch": "^2.3.5",
+    "apollo-link": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
+    "apollo-server-express": "^2.6.2",
+    "body-parser": "^1.19.0",
+    "connect-redis": "^3.4.1",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.0.4",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.1",
     "graphql": "^14.3.1",
-    "graphql-tools": "^4.0.4"
+    "graphql-tools": "^4.0.4",
+    "ioredis": "^4.10.0"
   },
   "devDependencies": {
+    "@types/connect-redis": "0.0.10",
+    "@types/dotenv": "^6.1.1",
+    "@types/ioredis": "^4.0.11",
     "ts-node": "^8.2.0",
     "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "3.3.4000"
