--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,6 +12,10 @@ server {
   location /auth/ {
     proxy_pass http://auth-service:8080/;
   }
+  location /gateway/ {
+    proxy_pass http://gateway:8080/;
+  }
+
   # location /panel/ {
   #   proxy_pass http://admin-client:8080/;
 
