--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ts-webpack",
+  "name": "admin-client",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
