--- a/resource-service/package.json
+++ b/resource-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "type-graphql-series",
+  "name": "resource-service",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
