--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -1,47 +1,55 @@
 {
-  "name": "admin-client",
+  "name": "admin-clientn",
   "version": "1.0.0",
-  "description": "",
-  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "node server.js",
-    "dev": "webpack-dev-server"
+    "dev": "next",
+    "devServer": "ts-node-dev --respawn --project tsconfig.server.json server/index.ts",
+    "build": "next build",
+    "start": "next build && next start",
+    "type-check": "tsc",
+    "generate": "gql-gen --config codegen.yml"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.0.2",
-    "@material-ui/icons": "^4.0.1",
-    "@material-ui/styles": "^4.0.2",
-    "axios": "^0.19.0",
-    "express": "^4.17.1",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@zeit/next-typescript": "^1.1.1",
+    "apollo-boost": "^0.3.1",
+    "apollo-client": "^2.6.2",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
+    "classnames": "^2.2.6",
+    "cookie": "^0.3.1",
+    "formik": "^1.5.4",
+    "graphql": "^14.2.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "jss": "^9.8.7",
+    "next": "^8.1.0",
+    "next-routes": "^1.4.2",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "webpack-dev-server": "^3.7.0"
+    "react-jss": "^8.6.1",
+    "recompose": "^0.30.0",
+    "utility-types": "^3.7.0"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^4.3.3",
-    "@types/redux-thunk": "^2.1.0",
-    "@types/axios": "^0.14.0",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.9",
-    "@types/redux": "^3.6.0",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.0.2",
-    "typescript": "^3.5.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-hot-middleware": "^2.25.0"
-  }
+    "@types/classnames": "^2.2.7",
+    "@types/react-jss": "^8.6.3",
+    "@types/recompose": "^0.30.6",
+    "@types/cookie": "^0.3.2",
+    "@types/graphql": "^14.2.0",
+    "@types/next": "^8.0.5",
+    "@types/react": "^16.8.15",
+    "@types/react-dom": "16.8.4",
+    "@graphql-codegen/cli": "^1.1.1",
+    "@graphql-codegen/typescript": "^1.1.1",
+    "@graphql-codegen/typescript-operations": "^1.1.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.1.1",
+    "ts-node": "^8.1.0",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "typescript": "3.3.4000"
+  },
+  "license": "ISC"
 }
