--- a/admin-client/tsconfig.json
+++ b/admin-client/tsconfig.json
@@ -1,16 +1,20 @@
 {
-  "compilerOptions": {
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "jsx": "react",
-    "module": "commonjs",
-    "noImplicitAny": true,
-    "outDir": "./build/",
-    "preserveConstEnums": true,
-    "removeComments": false,
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "target": "es5"
-  },
-  "include": ["./src/**/**/*"]
+    "compilerOptions": {
+        "target": "esnext",
+        "module": "esnext",
+        "jsx": "preserve",
+        "lib": ["dom", "es2017"],
+        "moduleResolution": "node",
+        "allowJs": true,
+        "noEmit": true,
+        "strict": true,
+        "allowSyntheticDefaultImports": true,
+        "skipLibCheck": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "removeComments": false,
+        "preserveConstEnums": true,
+        "sourceMap": true
+    },
+    "exclude": ["./node_modules/*", "./.next/*"]
 }
