--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -10,46 +10,47 @@
     "generate": "gql-gen --config codegen.yml"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/core": "^4.1.0",
+    "@material-ui/icons": "^4.1.0",
+    "@material-ui/styles": "^4.1.0",
     "@zeit/next-typescript": "^1.1.1",
-    "apollo-boost": "^0.3.1",
+    "apollo-boost": "^0.4.2",
     "apollo-client": "^2.6.2",
     "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
     "classnames": "^2.2.6",
-    "cookie": "^0.3.1",
-    "formik": "^1.5.4",
-    "graphql": "^14.2.1",
+    "cookie": "^0.4.0",
+    "formik": "^1.5.7",
+    "graphql": "^14.3.1",
     "isomorphic-unfetch": "^3.0.0",
     "jss": "^9.8.7",
     "next": "^8.1.0",
     "next-routes": "^1.4.2",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.5",
+    "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
     "recompose": "^0.30.0",
     "utility-types": "^3.7.0"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.7",
+    "@types/styled-jsx": "^2.2.8",
+    "@types/classnames": "^2.2.8",
     "@types/react-jss": "^8.6.3",
     "@types/recompose": "^0.30.6",
-    "@types/cookie": "^0.3.2",
+    "@types/cookie": "^0.3.3",
     "@types/graphql": "^14.2.0",
     "@types/next": "^8.0.5",
-    "@types/react": "^16.8.15",
+    "@types/react": "^16.8.19",
     "@types/react-dom": "16.8.4",
-    "@graphql-codegen/cli": "^1.1.1",
-    "@graphql-codegen/typescript": "^1.1.1",
-    "@graphql-codegen/typescript-operations": "^1.1.1",
-    "@graphql-codegen/typescript-react-apollo": "^1.1.1",
-    "ts-node": "^8.1.0",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "3.3.4000"
+    "@graphql-codegen/cli": "^1.2.1",
+    "@graphql-codegen/typescript": "^1.2.1",
+    "@graphql-codegen/typescript-operations": "^1.2.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.2.1",
+    "ts-node": "^8.2.0",
+    "ts-node-dev": "^1.0.0-pre.39",
+    "typescript": "3.5.1"
   },
   "license": "ISC"
 }
