--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "dev": "next",
     "devServer": "ts-node-dev --respawn --project tsconfig.server.json server/index.ts",
-    "build": "next build",
-    "start": "next build && next start",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "NODE_ENV=production node dist/index.js",
     "type-check": "tsc",
     "generate": "gql-gen --config codegen.yml"
   },
@@ -27,6 +27,7 @@
     "jss": "^9.8.7",
     "next": "^8.1.0",
     "next-routes": "^1.4.2",
+    "path-to-regexp": "^3.0.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-dom": "^16.8.6",
@@ -35,19 +36,20 @@
     "utility-types": "^3.7.0"
   },
   "devDependencies": {
-    "@types/styled-jsx": "^2.2.8",
-    "@types/classnames": "^2.2.8",
-    "@types/react-jss": "^8.6.3",
-    "@types/recompose": "^0.30.6",
-    "@types/cookie": "^0.3.3",
-    "@types/graphql": "^14.2.0",
-    "@types/next": "^8.0.5",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "16.8.4",
     "@graphql-codegen/cli": "^1.2.1",
     "@graphql-codegen/typescript": "^1.2.1",
     "@graphql-codegen/typescript-operations": "^1.2.1",
     "@graphql-codegen/typescript-react-apollo": "^1.2.1",
+    "@types/classnames": "^2.2.8",
+    "@types/cookie": "^0.3.3",
+    "@types/graphql": "^14.2.0",
+    "@types/next": "^8.0.5",
+    "@types/path-to-regexp": "^1.7.0",
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "16.8.4",
+    "@types/react-jss": "^8.6.3",
+    "@types/recompose": "^0.30.6",
+    "@types/styled-jsx": "^2.2.8",
     "ts-node": "^8.2.0",
     "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "3.5.1"
