--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -8,6 +8,7 @@
     "apollo-server-express": "^2.6.2",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
+    "class-transformer-validator": "^0.7.1",
     "class-validator": "^0.9.1",
     "connect-redis": "^3.4.1",
     "dotenv": "^8.0.0",
