--- a/resource-service/package.json
+++ b/resource-service/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "apollo-server-express": "^2.3.1",
     "class-transformer": "^0.2.3",
+    "class-transformer-validator": "^0.7.1",
     "class-validator": "^0.9.1",
     "connect-redis": "^3.4.1",
     "dotenv": "^7.0.0",
