--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -19,11 +19,15 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
+    "class-transformer": "^0.2.3",
+    "class-transformer-validator": "^0.7.1",
+    "class-validator": "^0.9.1",
     "classnames": "^2.2.6",
     "cookie": "^0.4.0",
     "formik": "^1.5.7",
     "graphql": "^14.3.1",
     "isomorphic-unfetch": "^3.0.0",
+    "jsonschema": "^1.2.4",
     "jss": "^9.8.7",
     "next": "^8.1.0",
     "next-routes": "^1.4.2",
@@ -36,6 +40,8 @@
     "utility-types": "^3.7.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@graphql-codegen/cli": "^1.2.1",
     "@graphql-codegen/typescript": "^1.2.1",
     "@graphql-codegen/typescript-operations": "^1.2.1",
