--- a/admin-client/tsconfig.json
+++ b/admin-client/tsconfig.json
@@ -1,20 +1,22 @@
 {
-    "compilerOptions": {
-        "target": "esnext",
-        "module": "esnext",
-        "jsx": "preserve",
-        "lib": ["dom", "es2017"],
-        "moduleResolution": "node",
-        "allowJs": true,
-        "noEmit": true,
-        "strict": true,
-        "allowSyntheticDefaultImports": true,
-        "skipLibCheck": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "removeComments": false,
-        "preserveConstEnums": true,
-        "sourceMap": true
-    },
-    "exclude": ["./node_modules/*", "./.next/*"]
+  "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "jsx": "preserve",
+    "lib": ["dom", "es2017"],
+    "moduleResolution": "node",
+    "allowJs": true,
+    "noEmit": true,
+    "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "removeComments": false,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false
+  },
+  "exclude": ["./node_modules/*", "./.next/*"]
 }
