--- a/resource-service/package.json
+++ b/resource-service/package.json
@@ -8,6 +8,7 @@
     "class-transformer": "^0.2.3",
     "class-transformer-validator": "^0.7.1",
     "class-validator": "^0.9.1",
+    "class-validator-jsonschema": "^1.2.1",
     "connect-redis": "^3.4.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
