--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -24,6 +24,7 @@
     "class-validator": "^0.9.1",
     "classnames": "^2.2.6",
     "cookie": "^0.4.0",
+    "express": "^4.17.1",
     "formik": "^1.5.7",
     "graphql": "^14.3.1",
     "isomorphic-unfetch": "^3.0.0",
@@ -48,6 +49,7 @@
     "@graphql-codegen/typescript-react-apollo": "^1.2.1",
     "@types/classnames": "^2.2.8",
     "@types/cookie": "^0.3.3",
+    "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.0",
     "@types/next": "^8.0.5",
     "@types/path-to-regexp": "^1.7.0",
