--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,21 @@
+
+
+# Cache zone
+# proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
+
+# upstream nextjs {
+#   server admin-client:8080;
+# }
+
 server {
+
   listen 80;
   root /srv/www;
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header X-Forwarded-Proto $scheme;
+
 
   location /api/ {
     proxy_pass http://resource-service:8080/;
@@ -16,13 +27,31 @@ server {
     proxy_pass http://gateway:8080/;
   }
 
-  # location /panel/ {
-  #   proxy_pass http://admin-client:8080/;
 
-  #   proxy_http_version 1.1;
-  #   proxy_set_header Upgrade $http_upgrade;
-  #   proxy_set_header Connection 'upgrade';
-  #   proxy_set_header Host $host;
-  #   proxy_cache_bypass $http_upgrade;
+
+ # BUILT ASSETS (E.G. JS BUNDLES)
+  # Browser cache - max cache headers from Next.js as build id in url
+  # Server cache - valid forever (cleared after cache "inactive" period)
+  
+  # location /panel/_next/static {
+  #   proxy_cache STATIC;
+  #   proxy_pass http://admin-client:8080/;
   # }
+
+  # STATIC ASSETS (E.G. IMAGES)
+  # Browser cache - "no-cache" headers from Next.js as no build id in url
+  # Server cache - refresh regularly in case of changes
+  
+  # location /panel/static {
+  #   proxy_cache STATIC;
+  #   proxy_ignore_headers Cache-Control;
+  #   proxy_cache_valid 60m;
+  #   proxy_pass http://admin-client:8080/;
+  # }
+
+  # DYNAMIC ASSETS - NO CACHE
+  # location / {
+  #   proxy_pass http://admin-client:8080/;
+  # }
+
 }
