--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "generate": "gql-gen --config codegen.yml"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.7",
     "@material-ui/core": "^4.1.0",
     "@material-ui/icons": "^4.1.0",
+    "@material-ui/pickers": "^3.1.2",
     "@material-ui/styles": "^4.1.0",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-boost": "^0.4.2",
@@ -24,6 +26,7 @@
     "class-validator": "^0.9.1",
     "classnames": "^2.2.6",
     "cookie": "^0.4.0",
+    "date-fns": "^2.0.0-alpha.37",
     "express": "^4.17.1",
     "formik": "^1.5.7",
     "graphql": "^14.3.1",
